[package]
name = "rucash"
version = "0.3.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/z-Wind/rucash"
description = "read Gnucash file"
keywords = ["gnucash"]
categories = ["database"]
authors = ["zWindr <zpsyhapcst@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
sqlx = { version = "0.6", optional = true }
futures = "0.3"
chrono = "0.4"
rust_decimal = { version = "1.13", optional = true }
xmltree = { version = "0.10", optional = true }
itertools = "0.11"
flate2 = "1.0"
tokio = { version = "1.23.0", features = ["full"] }
num-traits = "0.2"
thiserror = "1.0"

[lib]
name = "rucash"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
float-cmp = "0.9"
pretty_assertions = "1.3.0"

[[bench]]
name = "benchmark"
harness = false
required-features = ["sqlite", "xml"]

[features]
default = []
sqlx_common = [
    "sqlx/any",
    "sqlx/runtime-tokio-rustls",
    "sqlx/macros",
    "sqlx/chrono",
]
sqlite = ["sqlx_common", "sqlx/sqlite"]
postgres = ["sqlx_common", "sqlx/postgres"]
mysql = ["sqlx_common", "sqlx/mysql"]
xml = ["xmltree"]
decimal = ["rust_decimal"]

[[test]]
name = "sqlite"
path = "tests/sqlite.rs"
required-features = ["sqlite"]

[[test]]
name = "postgresql"
path = "tests/postgresql.rs"
required-features = ["postgres"]

[[test]]
name = "mysql"
path = "tests/mysql.rs"
required-features = ["mysql"]

[[test]]
name = "xml"
path = "tests/xml.rs"
required-features = ["xml"]

[[test]]
name = "all"
path = "tests/all.rs"
required-features = ["sqlite", "postgres", "mysql", "xml"]
